--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
     display: flex;
     list-style: none;
     gap: 20px;
-    color: #49557e;
+    color:#49557e;
     font-size: 18px;
 }
 .navbar-right{
@@ -19,7 +19,6 @@
     align-items: center;
     gap: 40px;
 }
-
 .navbar button{
     background: transparent;
     font-size: 16px;
@@ -37,11 +36,12 @@
     padding-bottom: 2px;
     border-bottom: 2px solid #49557e;
 }
-.navbar li{
+.navbar li {
     cursor: pointer;
 }
 .navbar-search-icon{
     position: relative;
+
 }
 .navbar-search-icon .dot{
     position: absolute;
@@ -51,4 +51,50 @@
     border-radius: 5px;
     top: -8px;
     right: -8px;
+}
+@media (max-width: 1050px){
+    .navbar .logo{
+        width: 140px;
+    }
+    .navbar-menu{
+        gap: 20px;
+        font-size: 17px;
+    }
+    .navbar-right{
+        gap: 30px;
+    }
+    .navbar-right img{
+        width: 22px;
+    }
+    .navbar-right button{
+        padding: 8px 25px;
+    }
+}
+
+@media (max-width: 900px){
+    .navbar .logo{
+        width: 120px;
+    }
+    .navbar-menu{
+        gap: 15px;
+        font-size: 16px;
+    }
+    .navbar-right{
+        gap: 20px;
+    }
+    .navbar-right img{
+        width: 20px;
+    }
+    .navbar-right button{
+        padding: 7px 20px;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 750px){
+ 
+    .navbar-menu{
+        display: none;
+    }
+  
 }
